Bug #30825: Problems when putting a non-spatial index on a GIS column  Fixed the usage of spatial data (and Point in specific) with  non-spatial indexes.  Several problems :    - The length of the Point class was not updated to include the      spatial reference system identifier. Fixed by increasing with 4      bytes.    - The storage length of the spatial columns was not accounting for      the length that is prepended to it. Fixed by treating the      spatial data columns as blobs (and thus increasing the storage      length)    - When creating the key image for comparison in index read wrong      key image was created (the one needed for and r-tree search,      not the one for b-tree/other search). Fixed by treating the      spatial data columns as blobs (and creating the correct kind of      image based on the index type).